[gd_scene load_steps=41 format=2]

[ext_resource path="res://data/player/camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/player/states/air.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/states/machine.gd" type="Script" id=3]
[ext_resource path="res://data/anim/hurt.tres" type="Animation" id=4]
[ext_resource path="res://scripts/player/states/walk.gd" type="Script" id=5]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=6]
[ext_resource path="res://sprites/player/noah/head0.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/noah/body0.png" type="Texture" id=8]
[ext_resource path="res://scripts/player/states/bump.gd" type="Script" id=9]
[ext_resource path="res://sprites/player/noah/legs0.png" type="Texture" id=10]
[ext_resource path="res://scripts/player/states/dash.gd" type="Script" id=11]
[ext_resource path="res://data/player/parameters/noah.tres" type="Resource" id=12]
[ext_resource path="res://data/shaders/flash.shader" type="Shader" id=13]
[ext_resource path="res://scripts/player/states/idle.gd" type="Script" id=14]
[ext_resource path="res://sprites/player/noah/larm0.png" type="Texture" id=15]
[ext_resource path="res://data/generic/shadow.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/player/arms/right/pose_5.tres" type="Resource" id=17]
[ext_resource path="res://sprites/player/noah/rbracelet0.png" type="Texture" id=18]
[ext_resource path="res://data/shaders/general.shader" type="Shader" id=19]
[ext_resource path="res://scripts/player/arms/right/pose_0.tres" type="Resource" id=20]
[ext_resource path="res://scripts/player/arms/right/pose_4.tres" type="Resource" id=21]
[ext_resource path="res://scripts/player/arms/right/pose_6.tres" type="Resource" id=22]
[ext_resource path="res://scripts/player/arms/right/pose_7.tres" type="Resource" id=23]
[ext_resource path="res://scripts/player/arms/right/pose_3.tres" type="Resource" id=24]
[ext_resource path="res://scripts/player/arms/right/pose_2.tres" type="Resource" id=25]
[ext_resource path="res://scripts/player/arms/right/pose_1.tres" type="Resource" id=26]
[ext_resource path="res://data/generic/entity/arm.tscn" type="PackedScene" id=27]
[ext_resource path="res://sprites/player/noah/rhand0.png" type="Texture" id=28]
[ext_resource path="res://sprites/player/noah/lbracelet0.png" type="Texture" id=29]
[ext_resource path="res://sprites/player/noah/lhand0.png" type="Texture" id=30]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 13 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0
shader_param/opacity = 1.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 19 )
shader_param/invertColors = false
shader_param/glowing_color = Color( 1, 1, 1, 1 )
shader_param/secondary_glowing_color = Color( 1, 1, 1, 1 )
shader_param/brightness = 1.0
shader_param/glowing_intensity = 1.0
shader_param/precision = 0.1
shader_param/opacity = 1.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 19 )
shader_param/invertColors = false
shader_param/glowing_color = Color( 0.913725, 0.443137, 0.129412, 1 )
shader_param/secondary_glowing_color = Color( 0.996078, 0.901961, 0.137255, 1 )
shader_param/brightness = 1.0
shader_param/glowing_intensity = 1.0
shader_param/precision = 0.1
shader_param/opacity = 1.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 19 )
shader_param/invertColors = false
shader_param/glowing_color = Color( 0.913725, 0.443137, 0.129412, 1 )
shader_param/secondary_glowing_color = Color( 1, 1, 1, 1 )
shader_param/brightness = 1.0
shader_param/glowing_intensity = 1.0
shader_param/precision = 0.1
shader_param/opacity = 1.0

[sub_resource type="GDScript" id=5]
script/source = "extends State

func enter(_msg := {}):
	pass
	
func physics_update(_delta):
	owner.decelerate()
	owner.animspeedAsVelocity()
	
func handle_input(event):
	if event.is_action_released(\"input_hold\" + owner.inputSuffix):
		emit_signal(\"finished\", \"idle\")
"

[sub_resource type="GDScript" id=6]
script/source = "extends State

"

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 30, 64 )

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.25, 0.75 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.87451, 0.443137, 0.14902, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/flash_modifier")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"CameraManipulator",
"LevelStateObserver",
"Player",
]]
material = SubResource( 1 )
z_index = 256
input_pickable = true
collision_mask = 96
collision/safe_margin = 1.0
script = ExtResource( 6 )
nAnimator = NodePath("Graphics/PlayerAnimator")
nCollisionBox = NodePath("CollisionShape2D")
nMainSprite = NodePath("Graphics/Body")
character = ExtResource( 12 )

[node name="Graphics" type="Node2D" parent="."]
use_parent_material = true

[node name="Body" type="Sprite" parent="Graphics"]
material = SubResource( 2 )
texture = ExtResource( 8 )

[node name="LeftArm" parent="Graphics/Body" instance=ExtResource( 27 )]
texture = ExtResource( 15 )
offset = Vector2( 16, -8 )

[node name="LeftHand" parent="Graphics/Body" instance=ExtResource( 27 )]
position = Vector2( 62, 12 )
texture = ExtResource( 30 )
definitions = [ ExtResource( 20 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ) ]

[node name="LeftBracelet" parent="Graphics/Body" instance=ExtResource( 27 )]
position = Vector2( 32, 8 )
texture = ExtResource( 29 )
definitions = [ ExtResource( 20 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ) ]

[node name="RightArm" parent="Graphics/Body" instance=ExtResource( 27 )]
position = Vector2( -12, -8 )
definitions = [ ExtResource( 20 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ) ]

[node name="RightHand" parent="Graphics/Body" instance=ExtResource( 27 )]
position = Vector2( 20, 20 )
texture = ExtResource( 28 )
definitions = [ ExtResource( 20 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ) ]

[node name="RightBracelet" parent="Graphics/Body" instance=ExtResource( 27 )]
position = Vector2( -4, 12 )
texture = ExtResource( 18 )
definitions = [ ExtResource( 20 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ) ]

[node name="Head" type="Sprite" parent="Graphics/Body"]
material = SubResource( 3 )
position = Vector2( 8, -44 )
texture = ExtResource( 7 )

[node name="Legs" type="Sprite" parent="Graphics/Body"]
material = SubResource( 4 )
position = Vector2( 8, 52 )
z_index = -1
texture = ExtResource( 10 )

[node name="PlayerAnimator" type="AnimationPlayer" parent="Graphics"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Hold" type="Node" parent="StateMachine"]
script = SubResource( 5 )

[node name="Bump" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Locked" type="Node" parent="StateMachine"]
script = SubResource( 6 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 16 )
shape = SubResource( 7 )

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="GraphicsAnimator" type="AnimationPlayer" parent="."]
anims/bump = SubResource( 8 )
anims/dash = SubResource( 9 )
anims/default = SubResource( 10 )
anims/hurt = ExtResource( 4 )

[node name="Timers" type="Node" parent="."]

[node name="GracePeriodTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="ComboTimer" type="Timer" parent="Timers"]
wait_time = 4.0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="FeetPosition" type="Position2D" parent="."]
position = Vector2( 0, 85 )

[node name="Shadow" parent="." instance=ExtResource( 16 )]
